#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2021-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#
# See file LICENSE for terms.
#

cmakedir = $(libdir)/cmake/ucx
cmake_DATA = \
    ucx-targets.cmake \
    ucx-config.cmake \
    ucx-config-version.cmake

EXTRA_DIST = $(cmake_DATA)
