#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#
# See file LICENSE for terms.
#

conf_filesdir = $(ucx_config_dir)
conf_files_DATA = ucx.conf

EXTRA_DIST = $(conf_files_DATA)
