#
# Copyright (c) NVIDIA CORPORATION & AFFILIATES, 2025. ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

# Stub headers: provide fallback if required package not installed.

stubincludedir = $(includedir)/stubs

# install gdaki stub headers in case of ucx-ib-mlx5-gda not installed.
nobase_stubinclude_HEADERS = \
	uct/ib/mlx5/gdaki/gdaki.cuh \
	uct/ib/mlx5/gdaki/gdaki_dev.h
